Got rid of using deprecated constructor